# MyAppTest

./: README.md  settings.gradle
app/: build.gradle
app/keystore/: keystore.jks
app/release/: app-release.aab  app-release.apk
app/src/main/java/com/example/myapplicationtest/: MainActivity.java  SysNativeApi.java
app/src/main/jni/: CMakeLists.txt  java_native_func_map.h  jni_onload.cpp  showmo_system.cpp  showmo_system.h
gradle/wrapper/: gradle-wrapper.properties
